js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-9-1.js
var
errObj
=
new
Error
(
)
;
errObj
.
name
=
"
ErrorName
"
;
assert
.
sameValue
(
errObj
.
toString
(
)
"
ErrorName
"
'
errObj
.
toString
(
)
'
)
;
reportCompare
(
0
0
)
;
